refactor: using Paths.get in the JLoxInterpreter has been replaced with Path.of