@@ -13,6 +13,7 @@ import java.io.IOException;
 import java.io.InputStreamReader;
 import java.nio.charset.Charset;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.List;
 
@@ -34,7 +35,7 @@ public class JLoxInterpreter {
   }
 
   private static void runFile(String path) throws IOException {
-    byte[] bytes = Files.readAllBytes(Paths.get(path));
+    byte[] bytes = Files.readAllBytes(Path.of(path));
     run(new String(bytes, Charset.defaultCharset()));
 
     if (hadError) {
